Updated main css

--- a/src/style.css
+++ b/src/style.css
@@ -24,10 +24,9 @@ a:hover {
 
 body {
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  place-items: center;
   min-width: 320px;
+  max-width: 1200px;
   min-height: 100vh;
 }
 
@@ -36,12 +35,29 @@ h1 {
   line-height: 1.1;
 }
 
-hr {
-  border: none;
-  border-top: 3px double #333;
-  width: 40vw;
-  color: #333;
-  height: 5px;
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media (prefers-color-scheme: light) {
@@ -51,5 +67,8 @@ hr {
   }
   a:hover {
     color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
   }
 }
