Style list of links

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,13 @@ button:focus-visible {
   align-items: center;
 }
 
+.page-links {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  gap: 0.25em;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
