--- a/src/pose-detection/pose-detection.css
+++ b/src/pose-detection/pose-detection.css
@@ -6,7 +6,13 @@
   justify-content: center;
 }
 
+#result-container {
+  display: flex;
+  justify-content: space-around;
+}
+
 canvas {
-  max-width: 900px;
+  width: 50%;
+  max-width: 500px;
   height: auto;
 }
