add padding to headers

--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,8 @@ button:focus-visible {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .page-links {
